// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    <title>
      Webpack App
    </title>
    <meta name=\\"viewport\\"
          content=\\"width=device-width,initial-scale=1\\"
    >
    <link href=\\"main.css\\"
          rel=\\"stylesheet\\"
    >
  </head>
  <body>
    <script src=\\"main.js\\">
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -15,5 +15,17 @@
   <body>
     <script src="main.js">
     </script>
+    <div>
+      <style type="text/css">
+        body{margin:0;padding:0;background:#eee}
+      </style>
+      <div>
+        <div class="FYwKg af1kF_4 _3gJU3_4 _36Yi4_4 FLByR_4 _2QIfI_4">
+          <span class="FYwKg _1GAuD C6ZIU_4 _3nVJR_4 _3NFar_4 _29m7__4 _26NdQ_4 _3LFeA_4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
Object {
  "index.html": "<!doctype html><html><head><meta charset=\\"utf-8\\"><title>Webpack App</title><meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\"><link href=\\"main.css\\" rel=\\"stylesheet\\"></head><body><script src=\\"main.js\\"></script></body></html>",
  "main.css": .FYwKg {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .FYwKg {
  outline: none;
}
._3j_fQ {
  display: block;
}
._19GyU {
  line-height: 1;
}
._302h6 {
  list-style: none;
}
._JRzj {
  quotes: none;
}
._JRzj:after,
._JRzj:before {
  content: "";
}
._2RYN8 {
  border-collapse: collapse;
  border-spacing: 0;
}
._2PHih {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
._3JHxg {
  background-color: transparent;
  color: inherit;
}
._1ZS7q::-ms-clear,
._3sxhA::-ms-expand {
  display: none;
}
._1ZS7q::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._2CaaD {
  background: none;
}
._2k9O2 {
  text-decoration: none;
  color: inherit;
}
._2YogD {
  border-radius: 50%;
}
._20Cd9 {
  width: 100%;
}
._31UWZ {
  height: 100%;
}
._2_vLJ {
  position: absolute;
}
._3VCZm {
  position: relative;
}
.Im1ty {
  position: fixed;
}
._1GAuD {
  display: block;
}
._2rhiT {
  display: inline;
}
._3ra6Y {
  display: none;
}
._2Cp5K {
  display: inline-block;
}
._2cWXo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._2rXUd {
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}
.UAVGz {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
._65lVK {
  -webkit-align-items: flex-end;
  -ms-flex-align: end;
  align-items: flex-end;
}
._2xd4d {
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}
._1QYmq {
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}
._2K42I {
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}
.HdpOi {
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
.UlUZ9 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}
._3GKNW {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}
._1Swh0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}
.j6yE1 {
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}
._194Ob {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.BDgXc {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}
._31blH {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}
._3X67E {
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}
._2KCB7 {
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}
._1zEMW {
  cursor: pointer;
}
._29sNS {
  pointer-events: none;
}
._29S9Q {
  text-align: left;
}
._3Pit8 {
  text-align: center;
}
._4I9aG {
  text-align: right;
}
._2Nj6k {
  overflow: hidden;
}
._1gtjJ {
  overflow: scroll;
}
.ba2YH {
  overflow: visible;
}
.BIdp3 {
  overflow: auto;
}
.sXF6i {
  min-width: 0;
}
._32Ekc {
  top: 0;
}
.IzyLY {
  bottom: 0;
}
._2P1mD {
  left: 0;
}
._36Q-K {
  right: 0;
}
._232ow {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._24Rgf {
  outline: none;
}
._3MPd_ {
  opacity: 0;
}
._1PRnx {
  white-space: nowrap;
  text-overflow: ellipsis;
}
._3O7Hk_4 {
  margin-top: 24px;
}
._1SxZY_4 {
  margin-top: 4px;
}
._3RtnC_4 {
  margin-top: 8px;
}
._28qcu_4 {
  margin-top: 12px;
}
._1WMOl_4 {
  margin-top: 20px;
}
._1R5V9_4 {
  margin-top: 32px;
}
._1z6Q5_4 {
  margin-top: 48px;
}
._1q5g-_4 {
  margin-top: 96px;
}
._38Fxk_4 {
  margin-top: 0;
}
._1A-42_4 {
  margin-bottom: 24px;
}
.oWGiI_4 {
  margin-bottom: 4px;
}
._1fD1J_4 {
  margin-bottom: 8px;
}
.xqsly_4 {
  margin-bottom: 12px;
}
._36UVG_4 {
  margin-bottom: 20px;
}
.sZZbp_4 {
  margin-bottom: 32px;
}
._1nSEO_4 {
  margin-bottom: 48px;
}
._27IRp_4 {
  margin-bottom: 96px;
}
._2nbnz_4 {
  margin-bottom: 0;
}
._2DJr0_4 {
  margin-left: 24px;
}
._2QFx4_4 {
  margin-left: 4px;
}
._37N5v_4 {
  margin-left: 8px;
}
._3SYGO_4 {
  margin-left: 12px;
}
.r4lkh_4 {
  margin-left: 20px;
}
._2-w9p_4 {
  margin-left: 32px;
}
._32O-K_4 {
  margin-left: 48px;
}
._34yqd_4 {
  margin-left: 96px;
}
._4bkQd_4 {
  margin-left: 0;
}
.YI7h2_4 {
  margin-right: 24px;
}
._1HXdc_4 {
  margin-right: 4px;
}
._2NUVr_4 {
  margin-right: 8px;
}
._7zeRd_4 {
  margin-right: 12px;
}
._1ltQk_4 {
  margin-right: 20px;
}
._21e2J_4 {
  margin-right: 32px;
}
._3k_Tt_4 {
  margin-right: 48px;
}
._2oTDE_4 {
  margin-right: 96px;
}
._2Rh8D_4 {
  margin-right: 0;
}
.fB92N_4 {
  padding-top: 24px;
}
._11hx2_4 {
  padding-top: 4px;
}
._1xfPS_4 {
  padding-top: 8px;
}
.zoxBO_4 {
  padding-top: 12px;
}
._6Gmbl_4 {
  padding-top: 20px;
}
._3gJU3_4 {
  padding-top: 32px;
}
._7dJpR_4 {
  padding-top: 48px;
}
._3L64u_4 {
  padding-top: 96px;
}
._17IyL_4 {
  padding-top: 0;
}
._1pAdR_4 {
  padding-bottom: 24px;
}
.JPP2m_4 {
  padding-bottom: 4px;
}
._2-ij9_4 {
  padding-bottom: 8px;
}
._3qNSL_4 {
  padding-bottom: 12px;
}
._3j1Zv_4 {
  padding-bottom: 20px;
}
._36Yi4_4 {
  padding-bottom: 32px;
}
._1w3ey_4 {
  padding-bottom: 48px;
}
._27UZa_4 {
  padding-bottom: 96px;
}
._3oVlh_4 {
  padding-bottom: 0;
}
.FLByR_4 {
  padding-left: 24px;
}
._1kpH2_4 {
  padding-left: 4px;
}
._3Vcu7_4 {
  padding-left: 8px;
}
._3RqUb_4 {
  padding-left: 12px;
}
.sDUog_4 {
  padding-left: 20px;
}
._3wXaW_4 {
  padding-left: 32px;
}
._255Zy_4 {
  padding-left: 48px;
}
._2ffuN_4 {
  padding-left: 96px;
}
.hLznC_4 {
  padding-left: 0;
}
._2QIfI_4 {
  padding-right: 24px;
}
._2scYw_4 {
  padding-right: 4px;
}
.MtsXR_4 {
  padding-right: 8px;
}
._1YKq0_4 {
  padding-right: 12px;
}
._1yTEl_4 {
  padding-right: 20px;
}
._2twe9_4 {
  padding-right: 32px;
}
._1IjAr_4 {
  padding-right: 48px;
}
._1HSSo_4 {
  padding-right: 96px;
}
._36-qN_4 {
  padding-right: 0;
}
._2ZHQ__4:active {
  -webkit-transform: scale(0.95);
  transform: scale(0.95);
}
._2ZhMR_4 {
  transition: opacity 0.125s ease, -webkit-transform 0.125s ease;
  transition: transform 0.125s ease, opacity 0.125s ease;
  transition: transform 0.125s ease, opacity 0.125s ease,
    -webkit-transform 0.125s ease;
}
._28IEJ_4 {
  transition: -webkit-transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  transition: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  transition: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235),
    -webkit-transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
}
._1A6vC_4 {
  border-radius: 2px;
}
.ZDQa2_4 {
  width: 48px;
}
._2UR0D_4 {
  height: 48px;
}
._1q9J3_4 {
  background: #0d3880;
}
._2AIhb_4 {
  background: #fff;
}
._1Epz5_4 {
  background: #eee;
}
._3s9kH_4 {
  background: #e60278;
}
._1waOD_4 {
  background: #2765cf;
}
._1QHjt_4 {
  background: #ccc;
}
._3FFie_4 {
  background: #f1f7ff;
}
.af1kF_4 {
  background: #fff;
}
._2mOt7_4 {
  background: #d0011b;
}
._2yc98_4 {
  background: #ffc600;
}
._15OcO_4 {
  background: #138a08;
}
._2aEH1_4 {
  background: #747474;
}
._1InW9_4 {
  background: #1e468c;
}
._2MJ7O_4 {
  background: #9556b7;
}
._2dmIJ_4 {
  background: #235bba;
}
._1crEl_4 {
  background: #3672d9;
}
._2pywI_4 {
  background: #cd026b;
}
.bw-64_4 {
  background: #fd0585;
}
._2nCOe_4 {
  background: #e8ecf2;
}
._236DE_4 {
  background: #ebe6ee;
}
._3J10a_4 {
  background: #f4e4e6;
}
._3NNv__4 {
  background: #e8f5e7;
}
._2-Z8c_4 {
  background: #fcf6e1;
}
._1GKx8_4 {
  background: #ebebeb;
}
._3ZxSf_4 {
  box-shadow: 0 2px 4px 0 rgba(28, 28, 28, 0.1),
    0 2px 2px -2px rgba(28, 28, 28, 0.1), 0 4px 4px -4px rgba(28, 28, 28, 0.2);
}
._3ERpG_4 {
  box-shadow: 0 2px 4px 0 rgba(28, 28, 28, 0.1),
    0 8px 8px -4px rgba(28, 28, 28, 0.1), 0 12px 12px -8px rgba(28, 28, 28, 0.2);
}
._3xNkU_4 {
  box-shadow: 0 2px 4px 0 rgba(28, 28, 28, 0.1),
    0 12px 12px -4px rgba(28, 28, 28, 0.1),
    0 20px 20px -12px rgba(28, 28, 28, 0.2);
}
._2PBxa_4 {
  box-shadow: 0 0 0 2px rgba(30, 144, 255, 0.7);
}
._1ZIuI_4 {
  box-shadow: inset 0 0 0 1px #898989;
}
._3yod7_4 {
  box-shadow: inset 0 0 0 1px #d6d6d6;
}
._3YN6A_4 {
  box-shadow: inset 0 0 0 1px #fff;
}
._2Rbqf_4 {
  box-shadow: inset 0 0 0 1px #d0011b;
}
._3jsGH_4 {
  box-shadow: inset 0 0 0 1px #ffc600;
}
._1db9R_4 {
  box-shadow: inset 0 0 0 1px #138a08;
}
._3n0R__4 {
  box-shadow: inset 0 0 0 1px #1e468c;
}
.S6rFp_4 {
  box-shadow: inset 0 0 0 1px #9556b7;
}
._368ah_4,
.Q3F-4_4 {
  box-shadow: inset 0 0 0 1px #2765cf;
}
.Ktic__4 {
  box-shadow: inset 0 0 0 2px #2765cf;
}
._10JUT_4 {
  box-shadow: inset 0 0 0 2px #fff;
}
@media screen and (min-width: 740px) {
  ._14h-M_4 {
    margin-top: 24px;
  }
  ._1lay8_4 {
    margin-top: 4px;
  }
  ._38RwL_4 {
    margin-top: 8px;
  }
  ._345RP_4 {
    margin-top: 12px;
  }
  ._2gSgt_4 {
    margin-top: 20px;
  }
  ._2AYjA_4 {
    margin-top: 32px;
  }
  ._3mKRM_4 {
    margin-top: 48px;
  }
  ._3HTMY_4 {
    margin-top: 96px;
  }
  ._2oSGv_4 {
    margin-top: 0;
  }
  ._2zYH7_4 {
    margin-bottom: 24px;
  }
  .BvdG9_4 {
    margin-bottom: 4px;
  }
  ._2AgkV_4 {
    margin-bottom: 8px;
  }
  .oBDA8_4 {
    margin-bottom: 12px;
  }
  ._1K5PL_4 {
    margin-bottom: 20px;
  }
  ._3mokp_4 {
    margin-bottom: 32px;
  }
  ._14uV5_4 {
    margin-bottom: 48px;
  }
  .AmO4v_4 {
    margin-bottom: 96px;
  }
  .bOHpt_4 {
    margin-bottom: 0;
  }
  ._3WSKx_4 {
    margin-left: 24px;
  }
  ._3eAc7_4 {
    margin-left: 4px;
  }
  ._2JEWg_4 {
    margin-left: 8px;
  }
  ._2clZw_4 {
    margin-left: 12px;
  }
  ._27kU__4 {
    margin-left: 20px;
  }
  ._3cO5P_4 {
    margin-left: 32px;
  }
  .jeent_4 {
    margin-left: 48px;
  }
  ._17MAN_4 {
    margin-left: 96px;
  }
  ._19Nxj_4 {
    margin-left: 0;
  }
  .fufMs_4 {
    margin-right: 24px;
  }
  ._3ORIb_4 {
    margin-right: 4px;
  }
  ._2F2gY_4 {
    margin-right: 8px;
  }
  ._1e-78_4 {
    margin-right: 12px;
  }
  ._3MnCE_4 {
    margin-right: 20px;
  }
  ._3mf68_4 {
    margin-right: 32px;
  }
  ._2ALh7_4 {
    margin-right: 48px;
  }
  ._2Opts_4 {
    margin-right: 96px;
  }
  .VyNNG_4 {
    margin-right: 0;
  }
  .hNtSj_4 {
    padding-top: 24px;
  }
  ._2X729_4 {
    padding-top: 4px;
  }
  ._1gxNg_4 {
    padding-top: 8px;
  }
  ._3M9FM_4 {
    padding-top: 12px;
  }
  .ECqs-_4 {
    padding-top: 20px;
  }
  ._2sA6r_4 {
    padding-top: 32px;
  }
  ._1yPon_4 {
    padding-top: 48px;
  }
  ._2y2Cx_4 {
    padding-top: 96px;
  }
  ._2JU1c_4 {
    padding-top: 0;
  }
  .myA79_4 {
    padding-bottom: 24px;
  }
  ._1h9Q4_4 {
    padding-bottom: 4px;
  }
  ._2irqO_4 {
    padding-bottom: 8px;
  }
  ._28iNm_4 {
    padding-bottom: 12px;
  }
  .Wdx2A_4 {
    padding-bottom: 20px;
  }
  .bMBHP_4 {
    padding-bottom: 32px;
  }
  ._1WtCj_4 {
    padding-bottom: 48px;
  }
  ._2UQVt_4 {
    padding-bottom: 96px;
  }
  ._1nNV6_4 {
    padding-bottom: 0;
  }
  ._3f7MY_4 {
    padding-left: 24px;
  }
  ._10z6g_4 {
    padding-left: 4px;
  }
  .OQuEk_4 {
    padding-left: 8px;
  }
  ._1Hvwd_4 {
    padding-left: 12px;
  }
  ._1YmyE_4 {
    padding-left: 20px;
  }
  ._3AmPl_4 {
    padding-left: 32px;
  }
  ._85X-f_4 {
    padding-left: 48px;
  }
  ._2WXaR_4 {
    padding-left: 96px;
  }
  ._3B00S_4 {
    padding-left: 0;
  }
  ._1ZHAP_4 {
    padding-right: 24px;
  }
  ._3qe3T_4 {
    padding-right: 4px;
  }
  ._2MoP5_4 {
    padding-right: 8px;
  }
  ._3vC6V_4 {
    padding-right: 12px;
  }
  ._3bs8w_4 {
    padding-right: 20px;
  }
  ._3XuYF_4 {
    padding-right: 32px;
  }
  ._2wyod_4 {
    padding-right: 48px;
  }
  ._1Scv7_4 {
    padding-right: 96px;
  }
  ._2T_8H_4 {
    padding-right: 0;
  }
  ._2Bz3E_4 {
    display: block;
  }
  .PrHFr_4 {
    display: inline;
  }
  ._2DGv8_4 {
    display: none;
  }
  .gHOxU_4 {
    display: inline-block;
  }
  ._3ftyQ_4 {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
  .veIdQ_4 {
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }
  ._1aq_D_4 {
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  .uxa1U_4 {
    -webkit-align-items: flex-end;
    -ms-flex-align: end;
    align-items: flex-end;
  }
  ._1kpGp_4 {
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
  .rNAgI_4 {
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  ._3i7ia_4 {
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
  ._1zDka_4 {
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
  ._3G8nW_4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
  ._1IztI_4 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
  ._1b7Y0_4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  ._1lyEa_4 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
  ._3KMTN_4 {
    text-align: left;
  }
  .UWgxb_4 {
    text-align: center;
  }
  ._2E2p6_4 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._3M7JL_4 {
    margin-top: 24px;
  }
  ._2Lhjc_4 {
    margin-top: 4px;
  }
  ._3zrgB_4 {
    margin-top: 8px;
  }
  ._3pY8F_4 {
    margin-top: 12px;
  }
  ._3PIf5_4 {
    margin-top: 20px;
  }
  ._1P-NR_4 {
    margin-top: 32px;
  }
  .wSANN_4 {
    margin-top: 48px;
  }
  ._5-scC_4 {
    margin-top: 96px;
  }
  .nVpca_4 {
    margin-top: 0;
  }
  ._3jZnI_4 {
    margin-bottom: 24px;
  }
  ._1z3zi_4 {
    margin-bottom: 4px;
  }
  ._3w3Mg_4 {
    margin-bottom: 8px;
  }
  ._323xp_4 {
    margin-bottom: 12px;
  }
  .WUd7g_4 {
    margin-bottom: 20px;
  }
  .A_W7V_4 {
    margin-bottom: 32px;
  }
  ._1Pq9s_4 {
    margin-bottom: 48px;
  }
  ._1INCF_4 {
    margin-bottom: 96px;
  }
  ._1ozIG_4 {
    margin-bottom: 0;
  }
  ._2BiXP_4 {
    margin-left: 24px;
  }
  ._1oqFg_4 {
    margin-left: 4px;
  }
  ._3yptL_4 {
    margin-left: 8px;
  }
  ._1-09X_4 {
    margin-left: 12px;
  }
  ._3HXR4_4 {
    margin-left: 20px;
  }
  ._3oGpZ_4 {
    margin-left: 32px;
  }
  ._1LBwK_4 {
    margin-left: 48px;
  }
  ._1ZT1r_4 {
    margin-left: 96px;
  }
  ._3URw2_4 {
    margin-left: 0;
  }
  ._1KDXK_4 {
    margin-right: 24px;
  }
  ._36HUC_4 {
    margin-right: 4px;
  }
  ._3-vsk_4 {
    margin-right: 8px;
  }
  ._2fCG7_4 {
    margin-right: 12px;
  }
  .IXQvt_4 {
    margin-right: 20px;
  }
  ._1W0oy_4 {
    margin-right: 32px;
  }
  ._2IZB9_4 {
    margin-right: 48px;
  }
  ._3HNgy_4 {
    margin-right: 96px;
  }
  ._34NUK_4 {
    margin-right: 0;
  }
  ._3wq8F_4 {
    padding-top: 24px;
  }
  ._2Vx0m_4 {
    padding-top: 4px;
  }
  ._2iXTz_4 {
    padding-top: 8px;
  }
  ._16HkC_4 {
    padding-top: 12px;
  }
  ._1QLt3_4 {
    padding-top: 20px;
  }
  ._3SIDw_4 {
    padding-top: 32px;
  }
  .mUg1C_4 {
    padding-top: 48px;
  }
  .hhBFx_4 {
    padding-top: 96px;
  }
  .JNERa_4 {
    padding-top: 0;
  }
  ._2Qd5S_4 {
    padding-bottom: 24px;
  }
  .Gqzz8_4 {
    padding-bottom: 4px;
  }
  ._1hR34_4 {
    padding-bottom: 8px;
  }
  .ggKXF_4 {
    padding-bottom: 12px;
  }
  .o9coJ_4 {
    padding-bottom: 20px;
  }
  .xgU4M_4 {
    padding-bottom: 32px;
  }
  ._1zzbR_4 {
    padding-bottom: 48px;
  }
  ._2OnNp_4 {
    padding-bottom: 96px;
  }
  .goG5m_4 {
    padding-bottom: 0;
  }
  .ceaKl_4 {
    padding-left: 24px;
  }
  ._1MzW0_4 {
    padding-left: 4px;
  }
  ._1J2OH_4 {
    padding-left: 8px;
  }
  ._34Q9p_4 {
    padding-left: 12px;
  }
  .Fh0Qw_4 {
    padding-left: 20px;
  }
  ._2EeQI_4 {
    padding-left: 32px;
  }
  ._1uQv2_4 {
    padding-left: 48px;
  }
  ._2t3FT_4 {
    padding-left: 96px;
  }
  ._2lzZV_4 {
    padding-left: 0;
  }
  ._2tf8n_4 {
    padding-right: 24px;
  }
  ._2XDJc_4 {
    padding-right: 4px;
  }
  .LZYzT_4 {
    padding-right: 8px;
  }
  ._2tvCZ_4 {
    padding-right: 12px;
  }
  ._3C1KL_4 {
    padding-right: 20px;
  }
  ._1VVPa_4 {
    padding-right: 32px;
  }
  ._2NQHE_4 {
    padding-right: 48px;
  }
  ._1XC4P_4 {
    padding-right: 96px;
  }
  ._3eOzq_4 {
    padding-right: 0;
  }
  ._3hAhl_4 {
    display: block;
  }
  ._2wnF0_4 {
    display: inline;
  }
  ._1quaz_4 {
    display: none;
  }
  ._3MYS9_4 {
    display: inline-block;
  }
  ._2II51_4 {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
  ._3O7rA_4 {
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }
  ._3LFVj_4 {
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  ._3a1-2_4 {
    -webkit-align-items: flex-end;
    -ms-flex-align: end;
    align-items: flex-end;
  }
  ._1N8Dy_4 {
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
  ._1d5GB_4 {
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  ._3gHmD_4 {
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
  ._2AUON_4 {
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
  ._10u3J_4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
  .IC4bo_4 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
  ._1FEyf_4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  ._3Syke_4 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
  ._1Dj_q_4 {
    text-align: left;
  }
  ._2PSIb_4 {
    text-align: center;
  }
  ._3CTQy_4 {
    text-align: right;
  }
}
.C6ZIU_4 {
  font-family: Roboto, Helvetica Neue, HelveticaNeue, Helvetica, Arial,
    sans-serif;
}
._29m7__4 {
  font-weight: 400;
}
._2CELK_4 {
  font-weight: 500;
}
.sQuda_4 {
  font-weight: 700;
}
._3oZ0H_4 {
  font-size: 12px;
  line-height: 20px;
}
.xvwS0_4 {
  -webkit-transform: translateY(0.4983333333333334em);
  transform: translateY(0.4983333333333334em);
}
._1_nER_4 {
  padding-top: 1px;
}
._1_nER_4:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._1PM5y_4 {
  font-size: 14px;
  line-height: 20px;
}
._6ufcS_4 {
  -webkit-transform: translateY(0.37928571428571434em);
  transform: translateY(0.37928571428571434em);
}
._2WTa0_4 {
  padding-top: 1px;
}
._2WTa0_4:before {
  content: "";
  margin-top: -9px;
  display: block;
  height: 0;
}
._8QVx6_4 {
  font-size: 16px;
  line-height: 24px;
}
._3srVf_4 {
  -webkit-transform: translateY(0.41500000000000004em);
  transform: translateY(0.41500000000000004em);
}
._30vru_4 {
  padding-top: 1px;
}
._30vru_4:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._3nVJR_4 {
  font-size: 18px;
  line-height: 28px;
}
._26NdQ_4 {
  -webkit-transform: translateY(0.4427777777777778em);
  transform: translateY(0.4427777777777778em);
}
._3LFeA_4 {
  padding-top: 1px;
}
._3LFeA_4:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._1H36Y_4 {
  font-weight: 400;
}
._1NXQv_4 {
  font-weight: 500;
}
._642YY_4 {
  font-size: 28px;
  line-height: 36px;
}
._2k6I7_4 {
  -webkit-transform: translateY(0.30785714285714294em);
  transform: translateY(0.30785714285714294em);
}
._2VCbC_4 {
  padding-top: 1px;
}
._2VCbC_4:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._1VMf3_4 {
  font-size: 21px;
  line-height: 32px;
}
._17ajR_4 {
  -webkit-transform: translateY(0.4269047619047619em);
  transform: translateY(0.4269047619047619em);
}
._6eu7W_4 {
  padding-top: 1px;
}
._6eu7W_4:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._2ss7s_4 {
  font-size: 21px;
  line-height: 28px;
}
._3J1wB_4 {
  -webkit-transform: translateY(0.33166666666666667em);
  transform: translateY(0.33166666666666667em);
}
._1SuKd_4 {
  padding-top: 1px;
}
._1SuKd_4:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._1b4Gs_4 {
  font-size: 18px;
  line-height: 28px;
}
._1xFST_4 {
  -webkit-transform: translateY(0.4427777777777778em);
  transform: translateY(0.4427777777777778em);
}
._3MBDC_4 {
  padding-top: 1px;
}
._3MBDC_4:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._27Shq_4,
.ELZOd_4 {
  color: #2765cf;
}
._2DNlq_4 {
  color: #d0011b;
}
.u7OQ5_4 {
  color: #ffc600;
}
._3KSG8_4 {
  color: #138a08;
}
._2TpEq_4 {
  color: #1e468c;
}
._1QEQt_4 {
  color: #9556b7;
}
._3vlP__4 {
  color: rgba(28, 28, 28, 0.63);
}
._1weGM_4 {
  color: #2765cf;
}
._3NFar_4 {
  color: #1c1c1c;
}
._2mc_y_4 {
  color: #fff;
}
._38cx__4 {
  color: rgba(28, 28, 28, 0.63);
}
.MxhoO_4 {
  color: hsla(0, 0%, 100%, 0.65);
}
._1W_Sg_4,
svg._1W_Sg_4 {
  color: #d0011b;
}
._29LNX_4 {
  color: #8c6c00;
}
svg._29LNX_4 {
  color: #b28800;
}
.And8z_4 {
  color: #118007;
}
svg.And8z_4 {
  color: #138a08;
}
._2kIc-_4,
svg._2kIc-_4 {
  color: #1e468c;
}
._1E-Nz_4 {
  color: #8b4cb0;
}
svg._1E-Nz_4 {
  color: #9556b7;
}
._2RmE6_4,
.Ivzvs_4 {
  padding-top: 14px;
  padding-bottom: 14px;
}
._11kId_4 {
  padding-top: 12px;
  padding-bottom: 12px;
}
._1NwPE_4 {
  padding-top: 10px;
  padding-bottom: 10px;
}
@media screen and (min-width: 740px) {
  ._642YY_4 {
    font-size: 42px;
    line-height: 44px;
  }
  ._2k6I7_4 {
    -webkit-transform: translateY(0.18880952380952384em);
    transform: translateY(0.18880952380952384em);
  }
  ._1VMf3_4 {
    font-size: 28px;
    line-height: 36px;
  }
  ._17ajR_4 {
    -webkit-transform: translateY(0.30785714285714294em);
    transform: translateY(0.30785714285714294em);
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: Array [
  "main.js",
]
CSS: Array [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
    <script src="scripts[0]">
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <script src="main.js">
     </script>
+    <div>
+      <style type="text/css">
+        body{margin:0;padding:0;background:#eee}
+      </style>
+      <div>
+        <div class="BRAID__reset-base_FYwKg BRAID__useBoxStyles-background_card_af1kF_seekAnz BRAID__useBoxStyles-padding_top_large_3gJU3_seekAnz BRAID__useBoxStyles-padding_bottom_large_36Yi4_seekAnz BRAID__useBoxStyles-padding_left_gutter_FLByR_seekAnz BRAID__useBoxStyles-padding_right_gutter_2QIfI_seekAnz">
+          <span class="BRAID__reset-base_FYwKg BRAID__useBoxStyles-display_block_1GAuD BRAID__typography-fontFamily_C6ZIU_seekAnz BRAID__typography-text_large_base_3nVJR_seekAnz BRAID__typography-invertableTone_neutral_light_3NFar_seekAnz BRAID__typography-fontWeight_regular_29m7__seekAnz BRAID__typography-text_large_baseline_26NdQ_seekAnz BRAID__typography-text_large_cropFirstLine_3LFeA_seekAnz">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
